--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ readme = "README.md"
 repository = "https://github.com/franksacco/bioristor-lib"
 
 [dependencies]
+defmt = { version = "0.3", optional = true }
 micromath = "2.0.0"
 nalgebra = { version = "0.32.1", default-features = false }
