Update model formulation
- Rename several parameters
- Edit models definition
- Custom functions for modulation and stem resistance

--- a/bioristor-lib/Cargo.toml
+++ b/bioristor-lib/Cargo.toml
@@ -8,6 +8,11 @@ readme = "README.md"
 repository = "https://github.com/franksacco/bioristor-lib"
 
 [dependencies]
-defmt = { version = "0.3", optional = true }
+defmt = { version = "0.3.2", optional = true }
 micromath = "2.0.0"
 nalgebra = { version = "0.32.1", default-features = false }
+
+[features]
+default = ["equation"]
+equation = []
+system = []
