--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ codegen-units = 1
 debug = 2
 debug-assertions = true
 incremental = false
-opt-level = 'z'
+opt-level = 3
 overflow-checks = true
 
 [profile.release]
@@ -20,7 +20,7 @@ debug = 2
 debug-assertions = false
 incremental = false
 lto = 'fat'
-opt-level = 'z'
+opt-level = 3
 overflow-checks = false
 
 [profile.test]
